--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,13 @@ before_script:
 
 deploy:
   - provider: s3
-    access_key_id: AKIAJGFL3PJGLJCCTNWQ
-    secret_access_key: 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 
+    access_key_id: 
+    secret_access_key:  
     bucket: acmedata.dplusv4.updates
     local_dir: /
   - provider: codedeploy
-    access_key_id: AKIAJGFL3PJGLJCCTNWQ
-    secret_access_key: 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
+    access_key_id: 
+    secret_access_key: 
     bucket: acmedata.dplusv4.updates
     key: latestUpdate
     application: MyTestApp
