--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,6 @@ deploy:
   deployment_group: MyTestDeploymentGroup
   on: *2
 before_deploy:
-- mkdir -p dpl_cd_upload
-- mv lastupdate dpl_cd_upload/lastupdate
+  - zip -r latest *
+  - mkdir -p dpl_cd_upload
+  - mv latest.zip dpl_cd_upload/latest.zip
