--- a/.travis.yml
+++ b/.travis.yml
@@ -29,5 +29,5 @@ deploy:
   on: *2
 before_deploy:
  - mkdir -p dpl_cd_upload
- - zip -r latest * -x 'node_module'
+ - zip -r latest * -x '/node_modules'
  - mv latest.zip dpl_cd_upload/latest.zip
