--- a/appspec.yml
+++ b/appspec.yml
@@ -7,4 +7,4 @@ files:
     destination: /home/Jetty/demo-base/webapps/ROOT/myApp
 hooks:
   BeforeInstall:
-    - location: /home/Jetty
+    - location: c:\home\Jetty\stop.bat
